# Bremen-Population-Analysis

./: README.md  custom.css  pyproject.toml
Verwaltungsgrenzen_HB_BHV/: hb_gemeindeteilgrenzen_BHV.dbf  hb_gemeindeteilgrenzen_BHV.shp  hb_gemeindeteilgrenzen_BHV.shx  hb_gemeindeteilgrenzen_BRE.dbf  hb_gemeindeteilgrenzen_BRE.shp  hb_gemeindeteilgrenzen_BRE.shx  hb_landesflaeche_Teil_I_BHV.dbf  hb_landesflaeche_Teil_I_BHV.shp  hb_landesflaeche_Teil_I_BHV.shx  hb_landesflaeche_Teil_I_BRE.dbf  hb_landesflaeche_Teil_I_BRE.qmd  hb_landesflaeche_Teil_I_BRE.shp  hb_landesflaeche_Teil_I_BRE.shx  hb_ortsteile_BHV.dbf  hb_ortsteile_BHV.shp  hb_ortsteile_BHV.shx  hb_ortsteile_BRE.dbf  hb_ortsteile_BRE.qmd  hb_ortsteile_BRE.shp  hb_ortsteile_BRE.shx  hb_stadtbezirke_BHV.dbf  hb_stadtbezirke_BHV.shp  hb_stadtbezirke_BHV.shx  hb_stadtbezirke_BRE.dbf  hb_stadtbezirke_BRE.qmd  hb_stadtbezirke_BRE.shp  hb_stadtbezirke_BRE.shx  hb_stadtteile_BHV.dbf  hb_stadtteile_BHV.shp  hb_stadtteile_BHV.shx  hb_stadtteile_BRE.dbf  hb_stadtteile_BRE.shp  hb_stadtteile_BRE.shx
data/raw/: 12400-00-03.csv  12411-03-03-1980.csv  12411-03-03-1990.csv  12411-03-03-2000.csv  12411-03-03-2010.csv  12411-03-03-2020.csv  12411-03-03-2021.csv  12411-03-03-2022.csv  12411-03-03-2023.csv
layouts/: Bremen-Bevoelkerung.grid.json
notebook/: Bremen-Bevoelkerung.py  custom.css  geopandas-test.py
notebook/layouts/: Bremen-Bevoelkerung.grid.json
