[tool.poetry]
name = "bremen-bevölkerung"
version = "0.1.0"
description = ""
authors = ["Jürgen Plenge <juergen@plenge.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
marimo = "^0.8.21"
altair = "^5.3.0"
pandas = "^2.2.2"
geodatasets = "^2024.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
